Fixes height and spacing realted changes given by Mehul sir for desktop view

--- a/src/index.css
+++ b/src/index.css
@@ -850,7 +850,8 @@ table {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 300px);
+  /* height: calc(100vh - 300px); */
+  height: 100vh;
 }
 .pageMainLoader {
   display: flex;
